--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,11 +2,32 @@
 
 <html>
     <head>
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="js/jquery-1.12.3.min.js" type="text/javascript"></script>
+        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <link href="css/estilo1.css" rel="stylesheet" type="text/css"/>
+        <script src="js/login.js" type="text/javascript"></script>
+        <title></title>
     </head>
+   
     <body>
-        <div>TODO write content</div>
+    <header>
+        <div class=jumbotron>
+            <h1>Cliente</h1>
+        </div>
+    </header>
+        <div id="login">
+            <form method="POST">
+                <div class="form-group">
+                    <input type="text" id="user" placeholder="Usuario..." class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="password" id="pass" placeholder="contraseña..." class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="submit" id="boton" class="btn btn-primary">
+                </div>
+            </form>
+        </div>
     </body>
 </html>
